Client: fixed some text-wrapping issues.

--- a/client/src/components/Alert.css
+++ b/client/src/components/Alert.css
@@ -2,8 +2,6 @@
   display: inline-block;
   padding: 20px;
   border-left: 5px solid;
-  white-space: pre-wrap;
-  width: 100%;
 }
 
 .alert-success {
@@ -21,12 +19,14 @@
 .alert-warning {
   background-color: #FCF3CF;
   border-left-color: #F1C40F;
+  white-space: pre-wrap;
   color: #F1C40F;
 }
 
 .alert-error {
   background-color: #F2D7D5;
   border-left-color: #C0392B;
+  white-space: pre-wrap;
   color: #C0392B;
 }
 
